# Axon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_RAG.md  AGENTS.md  API_REFERENCE.md  AXON_STORE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_STRUCTURAL_REPORT_2026-03-23.md  CONTRIBUTING.md  COPILOT_KNOWLEDGE_CENTER_PLAN.md  DETAILED_CHANGELOG.md  DEVELOPMENT.md  DOCUMENTATION_AUDIT_SUMMARY.md  Dockerfile  GETTING_STARTED.md  GOVERNANCE_CONSOLE.md  IMPROVEMENTS.md  MCP_TOOLS.md  MODEL_GUIDE.md  Makefile  PYPI_README.md  QUICKREF.md  README.md  SECURITY.md  SETUP.md  SOTA_ANALYSIS.md  SPARSE_RETRIEVAL_MILESTONE.md  TROUBLESHOOTING.md  axon-mcp.sh  bench_results.json  bench_results_bm25_storage_profile.json  bench_results_compat_failed_pairs_v010_vs_current.json  bench_results_fulltest_v010_vs_current.json  bench_results_function_pairs_v010_vs_current.json  bench_results_graphrag_community_storage_profile.json  bench_results_graphrag_cost_profile.json  bench_results_graphrag_relation_shard_load_parallel_profile.json  (+29 more)
src/axon/: Cargo.toml  __init__.py  _rust_loader.py  _ui_state.py  access.py  agent.py  api.py  api_schemas.py  axon_rust_Cargo.toml  axon_rust_lib.rs  cli.py  code_graph.py  code_retrieval.py  collection_ops.py  compression.py  config.py  config_wizard.py  crag.py  doctor.py  embeddings.py  ext_install.py  governance.py  graph_rag.py  graph_render.py  llm.py  loaders.py  logging_setup.py  main.py  maintenance.py  mcp_server.py  migration.py  mounts.py  paths.py  projects.py  query_router.py  repl.py  rerank.py  retrievers.py  runtime.py  rust_bridge.py  (+11 more)
src/axon/api_routes/: __init__.py  _rate_limit.py  config_routes.py  governance.py  graph.py  health.py  ingest.py  maintenance.py  metrics.py  projects.py  query.py  registry.py  security_routes.py  shares.py
src/axon/dynamic_graph/: __init__.py  models.py
src/axon/extensions/: __init__.py  axon-copilot-0.2.0.vsix  axon-copilot-0.2.1.vsix  axon-copilot-0.3.0.vsix  axon-copilot-0.3.1.vsix  axon-copilot-0.3.2.vsix  axon-copilot-0.4.0.vsix
src/axon/graph_backends/: __init__.py  base.py  dynamic_graph_backend.py  factory.py  federated_backend.py  graphrag_backend.py
src/axon/gui/: index.html
src/axon/gui/css/: style.css
src/axon/gui/js/: api.js  app.js  chat.js  graph_explorer.js
src/axon/integrations/: __init__.py  langchain.py  llama_index.py
src/axon/security/: __init__.py  cache.py  crypto.py  fallback_store.py  keyring.py  master.py  mount.py  seal.py  share.py  signing.py  wordlist.py
src/axon/security/data/: LICENSE-EFF-WORDLIST.txt
src/axon/target_rebuild/release/: axon_rust.d
src/axon/target_rebuild/release/.fingerprint/axon_rust-38a3272217bbd59c/: lib-axon_rust
src/axon/target_rebuild/release/.fingerprint/cfg-if-af44c0454701f66a/: lib-cfg_if  lib-cfg_if.json
src/axon/target_rebuild/release/.fingerprint/cpufeatures-09bb89b894cbd161/: lib-cpufeatures.json
src/axon/target_rebuild/release/.fingerprint/crypto-common-2ed005dfc4452f25/: lib-crypto_common.json
src/axon/target_rebuild/release/.fingerprint/equivalent-29a31ea8bdf948b8/: lib-equivalent  lib-equivalent.json
src/axon/target_rebuild/release/.fingerprint/fixedbitset-d6449c7c6e4faff4/: lib-fixedbitset.json
src/axon/target_rebuild/release/.fingerprint/generic-array-69676bf7a338a3df/: build-script-build-script-build.json
src/axon/target_rebuild/release/.fingerprint/generic-array-959e20b0dcb92139/: lib-generic_array
src/axon/target_rebuild/release/.fingerprint/generic-array-a8b1ffceef9822d1/: run-build-script-build-script-build
src/axon/target_rebuild/release/.fingerprint/hashbrown-94908b50efbb8ef6/: lib-hashbrown  lib-hashbrown.json
src/axon/target_rebuild/release/.fingerprint/heck-1b5e6ac03cad32de/: lib-heck.json
src/axon/target_rebuild/release/.fingerprint/indexmap-4964c053b9be1ee6/: lib-indexmap  lib-indexmap.json
src/axon/target_rebuild/release/.fingerprint/indoc-1cf30ff30f85d9ea/: lib-indoc
src/axon/target_rebuild/release/.fingerprint/itoa-29694e338d15ec01/: lib-itoa
src/axon/target_rebuild/release/.fingerprint/libc-a2a58c2b84286369/: build-script-build-script-build  build-script-build-script-build.json
src/axon/target_rebuild/release/.fingerprint/md5-b4129ed6a3a0d5b5/: lib-md5
src/axon/target_rebuild/release/.fingerprint/memchr-33e7ac1dbf352b3b/: lib-memchr
src/axon/target_rebuild/release/.fingerprint/memmap2-ef7f46ba0fd01774/: lib-memmap2  lib-memmap2.json
src/axon/target_rebuild/release/.fingerprint/memoffset-0b03839eeb0168a4/: build-script-build-script-build.json
src/axon/target_rebuild/release/.fingerprint/memoffset-6c08c6f2521aa1a8/: lib-memoffset
src/axon/target_rebuild/release/.fingerprint/memoffset-6db8ee2e8ffd071a/: run-build-script-build-script-build.json
src/axon/target_rebuild/release/.fingerprint/num-traits-918c7585d320d8b9/: build-script-build-script-build  build-script-build-script-build.json
src/axon/target_rebuild/release/.fingerprint/num-traits-f7e19c4544cfb382/: run-build-script-build-script-build  run-build-script-build-script-build.json
src/axon/target_rebuild/release/.fingerprint/once_cell-815369cb5eace4ff/: lib-once_cell
src/axon/target_rebuild/release/.fingerprint/once_cell-dc168f337e1a9b03/: lib-once_cell.json
src/axon/target_rebuild/release/.fingerprint/petgraph-e7d3c71204ce2cf4/: lib-petgraph  lib-petgraph.json
src/axon/target_rebuild/release/.fingerprint/proc-macro2-e3b7fb4fb754b3a6/: build-script-build-script-build  build-script-build-script-build.json
src/axon/target_rebuild/release/.fingerprint/pyo3-build-config-fa7dc6ac953c65d0/: dep-lib-pyo3_build_config
src/axon/target_rebuild/release/.fingerprint/pyo3-d53751730d1afab6/: lib-pyo3
src/axon/target_rebuild/release/.fingerprint/pyo3-f06542083e96aa8b/: build-script-build-script-build
src/axon/target_rebuild/release/.fingerprint/pyo3-ffi-0a6f4b0ea467231c/: run-build-script-build-script-build
src/axon/target_rebuild/release/.fingerprint/pyo3-ffi-1f9209f0e7601dd3/: build-script-build-script-build
src/axon/target_rebuild/wheel_extract/axon_rust-0.1.0.dist-info/: METADATA  RECORD
(+852 files in other folders)
