[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-rag"
version = "0.1.0"
description = "General-purpose open-source RAG engine with multi-LLM, hybrid retrieval, GraphRAG, and MCP support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Open Source Contributor"}
]
keywords = ["rag", "llm", "embeddings", "vector-search", "knowledge-base", "mcp", "ollama", "graphrag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "tf-keras>=2.0.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "google-genai>=1.4.0",
    "rank_bm25>=0.2.2",
    "httpx>=0.25.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0.0",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-docx>=1.0.0",
    "pymupdf>=1.24.0",
    "pypdf>=4.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=10.0.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "lancedb>=0.6.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.30.0",
]
chroma = [
    "chromadb>=0.4.0",
]
qdrant = [
    "qdrant-client>=1.7.0,<2.0.0",
]
fastembed = [
    "fastembed>=0.1.0,<1.0.0",
]
graphrag = [
    "networkx>=3.0",
    "leidenalg>=0.11.0",
    "igraph>=1.0.0",
]
gliner = [
    "gliner>=0.2.0",
]
llmlingua = [
    "llmlingua>=0.2.0",
]
rebel = [
    "transformers>=4.20.0",
]
loaders = [
    "ebooklib>=0.18",
    "striprtf>=0.0.26",
    "extract-msg>=0.28.0",
]
eval = [
    "deepeval>=0.21.0",
]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black==23.12.1",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pre-commit>=3.4.0,<4.0.0",
]
all = [
    "streamlit>=1.30.0",
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0,<2.0.0",
    "fastembed>=0.1.0,<1.0.0",
    "networkx>=3.0",
    "leidenalg>=0.11.0",
    "igraph>=1.0.0",
    "gliner>=0.2.0",
    "llmlingua>=0.2.0",
    "transformers>=4.20.0",
    "ebooklib>=0.18",
    "striprtf>=0.0.26",
    "extract-msg>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/jyunming/studio_brain_open"
Documentation = "https://github.com/jyunming/studio_brain_open/tree/main/docs"
Repository = "https://github.com/jyunming/studio_brain_open"
"Bug Tracker" = "https://github.com/jyunming/studio_brain_open/issues"

[project.scripts]
axon = "axon.cli:main"
axon-ui = "axon.webapp:main_ui"
axon-api = "axon.api:main"
axon-mcp = "axon.mcp_server:main"
axon-ext = "axon.ext_install:install_vscode_extension"

# Required for src/ layout — without this setuptools won't find the axon package
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
axon = [
    "extensions/*.vsix",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | \.test_tmp
)/
| tests/e2e/test_vscode_extension_commands_e2e\.py
| tests/e2e/test_vscode_extension_server_e2e\.py
| tests/e2e/test_vscode_extension_tools_e2e\.py
| tests/e2e/vscode_helpers\.py
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".test_tmp",
    "tests/e2e/test_vscode_extension_commands_e2e.py",
    "tests/e2e/test_vscode_extension_server_e2e.py",
    "tests/e2e/test_vscode_extension_tools_e2e.py",
    "tests/e2e/vscode_helpers.py",
]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise-without-from-inside-except — HTTPException wrapping is intentional
    "B905",  # zip-without-explicit-strict — lengths are guaranteed equal at call sites
    "B023",  # function-uses-loop-variable — closures intentionally capture outer scope
]

[tool.ruff.lint.isort]
known-first-party = ["axon"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*.py" = ["E402"]   # mid-file imports used for lazy mock patching

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "lancedb.*",
    "sentence_transformers.*",
    "ollama.*",
    "rank_bm25.*",
    "qdrant_client.*",
    "fastembed.*",
    "deepeval.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
tmp_path_retention_policy = "none"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=axon",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "e2e: marks end-to-end feature tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "eval: marks RAG evaluation smoke tests (precision@k, context relevance, faithfulness)",
    "demo: marks end-to-end happy-path demo tests",
    "perf: marks latency/throughput performance tests",
    "stress: marks high-volume concurrency stress tests",
    "timeout: marks tests with a timeout limit",
    "extension: marks VS Code extension qualification tests",
]

[tool.coverage.run]
source = ["src/axon"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/axon/webapp.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
