[package]
name = "axon_rust"
version = "0.3.2"
edition = "2021"

[lib]
name = "axon_rust"
crate-type = ["cdylib"]
path = "axon_rust_lib.rs"

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
md5 = "0.7"
regex = { version = "1", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
sha2 = "0.10"
digest = "0.10"
memmap2 = "0.9"
petgraph = "0.6"
